pretty fly picture

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	</head>
 	<body>
 		<h1> Stephen Thornquist </h1>
 		<div class = "Intro">
@@ -18,5 +20,6 @@
 			<h3> Contact Me </h3>
 			<p> Reach me at <a href = "Mailto:thornquist@fas.harvard.edu"> thornquist@fas.harvard.edu </a> </p>
 		</div>
+	<img src = "pretty.jpg" ALT = "Overlain GAL4 driver expression patterns using UAS-GFP in D. melanogaster">
 	</body>
 </html>
