pretty fly picture

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<h3> Contact Me </h3>
 			<p> Reach me at <a href = "Mailto:thornquist@fas.harvard.edu"> thornquist@fas.harvard.edu </a> </p>
 		</div>
-	<img src = "pretty.jpg" ALT = "Overlain GAL4 driver expression patterns using UAS-GFP in D. melanogaster">
+	<img src = "pretty.jpg" ALT = "Overlain GAL4 driver expression patterns using UAS-GFP in D. melanogaster"
+	title = "Overlain GAL4 driver expression patterns using UAS-GFP in D. melanogaster">
 	</body>
 </html>
